change dev library photo link

--- a/plugins/portfolio/templates/elements/front_photos.html
+++ b/plugins/portfolio/templates/elements/front_photos.html
@@ -4,7 +4,7 @@
 			<a href="/about/customised"><p class="mTop">Customised Training</p></a>
 	</div>
 		<div class="col-xs-12 bw pic noPad">
-  			<a href="/about/customised"><img class="img-responsive" src="/img/front_first.jpg" alt="beach"></a><br />
+  			<a href="/about/customised"><img class="img-responsive" src="/img/front_first.jpg" alt="Custom Training"></a><br />
   	</div>
 </div>
 	<div class="col-xs-6 col-sm-3">
@@ -12,7 +12,7 @@
 			<a href="/contact/support"><p class="mTop">Continued Support</p></a>
 	</div>
 		<div class="col-xs-12 bw pic noPad">
-  			<a href="/contact/support"><img class="img-responsive" src="/img/front_second.jpg" alt="beach"></a><br />
+  			<a href="/contact/support"><img class="img-responsive" src="/img/front_second.jpg" alt="Continue Support"></a><br />
   	</div>
 </div>
 	<div class="col-xs-6 col-sm-3">
@@ -20,7 +20,7 @@
 			<a href="/about/approach"><p class="mTop">Unique Approach</p></a>
 	</div>
 		<div class="col-xs-12 bw pic noPad">
-  			<a href="/about/approach"><img class="img-responsive" src="/img/front_third.jpg" alt="beach"></a><br />
+  			<a href="/about/approach"><img class="img-responsive" src="/img/front_third.jpg" alt="Unique Approach"></a><br />
   	</div>
 </div>
 	<div class="col-xs-6 col-sm-3">
@@ -28,7 +28,7 @@
 			<a href="http://library.henley.training"><p class="mTop">Development Library</p></a>
 	</div>
 		<div class="col-xs-12 bw pic noPad">
-  			<img class="img-responsive" src="/img/front_four.jpg" alt="beach"><br />
+  			<a href="http://library.henley.training"><img class="img-responsive" src="/img/front_four.jpg" alt="Development Library"></a><br />
   	</div>
 </div>
 	<div class="col-xs-12">
