henleymc.com link

--- a/plugins/portfolio/templates/elements/front_photos.html
+++ b/plugins/portfolio/templates/elements/front_photos.html
@@ -28,7 +28,7 @@
 			<a href="http://library.henley.training"><p class="mTop">Development Library</p></a>
 	</div>
 		<div class="col-xs-12 bw pic noPad">
-  			<a href="http://library.henley.training"><img class="img-responsive" src="/img/front_four.jpg" alt="Development Library"></a><br />
+  			<a href="http://library.henleymc.com"><img class="img-responsive" src="/img/front_four.jpg" alt="Development Library"></a><br />
   	</div>
 </div>
 	<div class="col-xs-12">
