henleymc.com link

--- a/plugins/portfolio/templates/elements/front_photos.html
+++ b/plugins/portfolio/templates/elements/front_photos.html
@@ -25,7 +25,7 @@
 </div>
 	<div class="col-xs-6 col-sm-3">
 		<div class="col-xs-12 text-center photoTitle noPad">
-			<a href="http://library.henley.training"><p class="mTop">Development Library</p></a>
+			<a href="http://library.henleymc.com"><p class="mTop">Development Library</p></a>
 	</div>
 		<div class="col-xs-12 bw pic noPad">
   			<a href="http://library.henleymc.com"><img class="img-responsive" src="/img/front_four.jpg" alt="Development Library"></a><br />
