--- a/plugins/portfolio/templates/contact_page.html
+++ b/plugins/portfolio/templates/contact_page.html
@@ -10,7 +10,7 @@
             <ul class="list-unstyled">
                 <li><i class="fa fa-location-arrow contactIcons"></i>&nbsp; Unit AG-PF-301, Jumeriah Lakes Towers, Dubai</li>
                 <li><i class="fa fa-envelope-o contactIcons"></i>&nbsp; <a href="mailto:info@henleymc.com">info@henleymc.com</a></li>
-                <li><i class="fa fa-phone contactIcons"></i>&nbsp; +9714 552 8008s</li>
+                <li><i class="fa fa-phone contactIcons"></i>&nbsp; +971 4557 1454</li>
         </ul>
         </div>
     </div>
