--- a/plugins/portfolio/templates/index.html
+++ b/plugins/portfolio/templates/index.html
@@ -1,14 +1,24 @@
-<html>
-<head>
-<style>
-body {
-font-size: 48px;
-font-family: fantasy, Arial;
-text-align: center;
-margin-top: 100px;
-}
-</style>
-</head>
-<body>
-Website under maintenance.
-</body>
+^tmp_head^
+    <div class="hero" ng-if="hero_image">
+        <img class="hero_bg" ng-src="{{hero_image}}"/>
+        </div>
+    </div>
+    <div ng-class="{container: true, standalone: !hero_image}">
+        <div class="row">
+            <div id="articles" ng-class="{'col-sm-9': sideNavItems, 'col-sm-10 col-sm-offset-1': !sideNavItems}">               
+                ^articles^
+            </div>
+            <div class="col-sm-3" ng-if="sideNavItems">
+                ^side_nav^
+            </div>
+       <!--     <div ng-class="{'col-sm-9': sideNavItems, 'col-sm-10 col-sm-offset-1': !sideNavItems}">
+                <footer>
+                    &copy; ^year^ ^site_name^
+                </footer>
+            </div> -->
+            <div class="spacer"></div>
+        </div>
+    </div>
+^infinite_scroll^
+^angular^
+^tmp_footer^
