--- a/plugins/portfolio/templates/landing_page.html
+++ b/plugins/portfolio/templates/landing_page.html
@@ -1,14 +1,25 @@
-<html>
-<head>
-<style>
-body {
-font-size: 48px;
-font-family: fantasy, Arial;
-text-align: center;
-margin-top: 100px;
-}
-</style>
-</head>
-<body>
-Website under maintenance.
-</body>
+^tmp_head^
+    <div class="headerborder"></div>
+    <div class="hero">
+        <img class="hero_bg" src="^hero_image^"></img>
+        <div class="hero_callouts black_75" style="^display_callouts^">
+            <div class="row">
+                ^callouts^
+        </div>
+    </div>
+</div>
+    <div class="container">
+        <div class="row">
+            ^tmp_elements=accreditations^
+    </div>
+        <div class="row spacer">
+            <div class="col-xs-12">
+                ^layout^
+                ^tmp_elements=call_to_action^
+                ^tmp_elements=front_photos^
+                ^tmp_elements=search_field^
+                ^tmp_elements=clients_slider^
+        </div>
+    </div>
+</div>
+^tmp_footer^
