--- a/plugins/portfolio/templates/elements/top_menu.html
+++ b/plugins/portfolio/templates/elements/top_menu.html
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="navbar_collapse_1">
             <ul class="nav navbar-nav navbar-right">
                 ^navigation^
-                ^account_buttons^
+                <!-- ^account_buttons^ -->
             </ul>
         </div>
     </div>
