--- a/plugins/portfolio/templates/landing_page.html
+++ b/plugins/portfolio/templates/landing_page.html
@@ -17,7 +17,7 @@
                 ^layout^
                 ^tmp_elements=call_to_action^
                 ^tmp_elements=front_photos^
-                
+                <!-- ^tmp_elements=search_field^ -->
                 ^tmp_elements=clients_slider^
         </div>
     </div>
