--- a/plugins/portfolio/templates/footer.html
+++ b/plugins/portfolio/templates/footer.html
@@ -1,5 +1,5 @@
             <footer>
-                &copy; ^year^ ^site_name^
+                &copy; ^year^ ^site_name^ - <a href="https://www.dmcc.ae/">DMCC</a>
             </footer>
         </div>
     </body>
