--- a/plugins/portfolio/templates/about_page.html
+++ b/plugins/portfolio/templates/about_page.html
@@ -5,8 +5,27 @@
 			<h3 class="title">About Us</h3>
 		</div>
 		<div class="col-xs-12">
-			<p>Henley Management centre brings together the latest international management thinking, business concepts and growth strategies, using them to transform personal, team and organisational performance. At Henley we possess a proven record of working with blue chip clients for in UK, Europe and Far East and Middle East.</p>
-			<p>Our wide range of clients, both in public and private sectors, represent a variety of businesses such as Oil and Gas, Petrochemical Industries, Banks and Financial Institutions, Ministries and Governmental bodies. Our international experience has given us a clear understanding of how businesses operate on strategic, tactical and cultural levels.</p>
+			<h1>Winning solutions for people development.</h1>
+			<p>HMC Consultancy services help transform businesses by defining and designing innovative and effective management and HR solutions. Working closely with clients, our consultants identify problems clearly and develop robust, integrated solutions for personal, team, HR or organisational development. With a broad range of experience covering the private, public and voluntary sectors, our consultants can deliver high quality tailored solutions.</p>
+
+<p>Our commitment to clients is to develop maximum sustainable performance and to create a compelling place for employees to thrive and grow. The process begins with in-depth analysis, which highlights the key strategic and operational indicators helping or hindering our client’s success. Once problems have been defined and understood, we create capability enhancing solutions tailored to the specific business issue. The key success of our programme and project implementation is recognising that each business scenario is different and that people are central to methodologies and transformations that work.</p>
+
+<h1 style="font-color: red;">Consultancy Services</h1>
+<ul>
+<li>Designing a relevant and powerful HR strategy</li>
+<li>Developing and delivering an effective resourcing strategy</li> 
+<li>Aligning people with strategic plans</li>
+<li>HR systems and organisation design</li>
+<li>Increasing individual, team and organisational performance</li>
+<li>Developing talent management systems</li>
+<li>Creating and implementing performance management systems</li>
+<li>Building career pathways for individuals and teams</li>
+<li>Developing training strategies</li>
+<li>Creating HR development platforms</li>
+<li>Managing recruitment or selection programmes</li>
+<li>Developing a dynamic diversity strategy</li>
+<li>Executive level career change and career support
+</ul>
 		</div>
 		<div class="col-xs-12">
 			<hr>
@@ -47,7 +66,7 @@
 		</div>
 		<div class="col-xs-6 col-sm-3">
 			<div class="col-xs-12 text-center photoTitle noPad">
-				<p class="mTop">Customised Training</p>
+				<p class="mTop">Customised Projects</p>
 			</div>
 			<div class="col-xs-12 bw pic noPad">
   				<img class="img-responsive" src="/img/front_first.jpg" alt="beach"><br />
