--- a/plugins/portfolio/templates/elements/front_photos.html
+++ b/plugins/portfolio/templates/elements/front_photos.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-xs-6 col-sm-3">
 		<div class="col-xs-12 text-center photoTitle noPad">
-			<a href="/about/customised"><p class="mTop">Customised Training</p></a>
+			<a href="/about/customised"><p class="mTop">Customised Projects</p></a>
 	</div>
 		<div class="col-xs-12 bw pic noPad">
   			<a href="/about/customised"><img class="img-responsive" src="/img/front_first.jpg" alt="Custom Training"></a><br />
