--- a/plugins/portfolio/templates/about_accreditations.html
+++ b/plugins/portfolio/templates/about_accreditations.html
@@ -19,7 +19,7 @@
 		</div>
 		<div class="col-xs-12 bs-callout bs-callout-danger">
 			<h4>Strength and Pragmatism</h4>
-			<p>We are proud to deliver a practical unique approach to learning founded on knowledge, strength and a highly diverse and practical training team.</p>
+			<p>We are proud to deliver a practical unique approach to learning founded on knowledge, strength and a highly diverse and practical consultancy team.</p>
 		</div>
 		<div class="col-xs-12 bs-callout bs-callout-danger">
 			<h4>Respect and Tolerance</h4>
