--- a/plugins/portfolio/templates/about_page.html
+++ b/plugins/portfolio/templates/about_page.html
@@ -5,12 +5,12 @@
 			<h3 class="title">About Us</h3>
 		</div>
 		<div class="col-xs-12">
-			<h1>Winning solutions for people development.</h1>
+			<h2 style="color: #CB1A1C;">Winning solutions for people development.</h1>
 			<p>HMC Consultancy services help transform businesses by defining and designing innovative and effective management and HR solutions. Working closely with clients, our consultants identify problems clearly and develop robust, integrated solutions for personal, team, HR or organisational development. With a broad range of experience covering the private, public and voluntary sectors, our consultants can deliver high quality tailored solutions.</p>
 
 <p>Our commitment to clients is to develop maximum sustainable performance and to create a compelling place for employees to thrive and grow. The process begins with in-depth analysis, which highlights the key strategic and operational indicators helping or hindering our client’s success. Once problems have been defined and understood, we create capability enhancing solutions tailored to the specific business issue. The key success of our programme and project implementation is recognising that each business scenario is different and that people are central to methodologies and transformations that work.</p>
 
-<h1 style="font-color: red;">Consultancy Services</h1>
+<h2 style="color: #CB1A1C;">Consultancy Services</h1>
 <ul>
 <li>Designing a relevant and powerful HR strategy</li>
 <li>Developing and delivering an effective resourcing strategy</li> 
@@ -31,7 +31,7 @@
 			<hr>
 		</div>
 		<div class="col-xs-12">
-			<p>Henley Management Centre (HMC) offers a range of regularly scheduled courses covering the following areas:</p>
+			<p>HMC offers an in depth range of subjects areas which can be customised to specific client requirements:</p>
 		</div>
 		<div class="col-xs-6 left-col">
 			<ul class="list-unstyled about-list">
@@ -59,7 +59,15 @@
 			<hr>
 		</div>
 		<div class="col-xs-12">
-			<p>Courses are continuously reviewed ensuring that the content is the very latest and therefore provide delegates and their organisations with a true competitive advantage. Our unique practical training approach blends the development of conceptual skills into the training courses, showing delegates how to manage a range of problems typical of those found within any modern organisation.</p>
+<h2 style="color: #CB1A1C;">Benefits</h2>
+<ul>
+<li>We build consultancy teams that are cross-functional and multi-disciplinary, providing the necessary experience, expertise and capability to successfully plan, manage and deliver a wide range of projects.</li>
+<li>Our partnership with clients facilitates a collaborative approach to engage with the problem at hand and create dynamic and workable solutions.</li>
+<li>Consulting solutions are innovative and develop maximum sustainable performance to create a compelling place for employees to thrive and grow.</li>
+<li>Our consultants are experts in conceptualising possibilities, planning scenarios and developing dynamic strategies.</li>
+<li>Clients receive clear strategies and plans which can be implemented following a robust project management framework.</li>
+<li>Our tailored services are prepared to meet the needs of an increasingly diverse client base and to align with our clients’ business agenda.</li>
+</ul>
 		</div>
 		<div class="col-xs-12">
 			<hr>
