--- a/plugins/portfolio/templates/approach.html
+++ b/plugins/portfolio/templates/approach.html
@@ -5,7 +5,7 @@
 			<h3 class="title">The Henley Approach</h3>
 		</div>
 	<div class="col-xs-12">
-		<p>Our unique approach to training follows the Skills2Gain ™ methodology. This approach creates a dynamic, challenging and stimulating atmosphere within the training room. Delegates will also be able to tackle real world challenges similar to those facing them in the workplace.</p>
+		<p>Our unique approach to consultancy follows the Skills2Gain ™ methodology. This approach creates a dynamic, challenging and stimulating atmosphere enabling our clients to tackle real world challenges similar to those facing them in the workplace.</p>
 	</div>
 		<div class="col-xs-12">
 			<hr>
@@ -16,19 +16,19 @@
 		<div class="col-xs-12 col-sm-8 right-col">
 			<div class="col-xs-12 bs-callout bs-callout-danger">
 				<h4>Assess</h4>
-				<p>We work with delegates to establish their own objectives and aspirations to ensure they gain the skills required and truly benefit from the course.</p>
+				<p>We work with our clients to establish their own objectives and aspirations to ensure they gain the skills required and truly benefit from the course.</p>
 			</div>
 			<div class="col-xs-12 bs-callout bs-callout-danger">
 				<h4>Inspire</h4>
-				<p>We use the latest real world case studies, games and practical exercises to inspire delegates to adopt a new mind set and approach.</p>
+				<p>We use the latest real world case studies, games and practical exercises to inspire our clients to adopt a new mind set and approach.</p>
 			</div>
 			<div class="col-xs-12 bs-callout bs-callout-danger">
 				<h4>Change</h4>
-				<p>We equip delegates with cutting-edge tools and techniques to effect positive change within their departments and the organisation as a whole.</p>
+				<p>We equip our clients with cutting-edge tools and techniques to effect positive change within their departments and the organisation as a whole.</p>
 			</div>
 			<div class="col-xs-12 bs-callout bs-callout-danger">
 				<h4>Apply</h4>
-				<p>We help delegates to create SMART relevant action plans and apply them when they are back in the workplace.</p>
+				<p>We help our clients to create SMART relevant action plans and apply them when they are back in the workplace.</p>
 			</div>
 		</div>
 		<div class="col-xs-12">
