price and dates

--- a/plugins/portfolio/templates/elements/article.html
+++ b/plugins/portfolio/templates/elements/article.html
@@ -13,7 +13,7 @@
         <span>Duration: </span><span id="durationText">^article_duration^</span>
         </div>
         <div id="price" class="col-xs-12 time-hide-courses priceDuration"> -->
-        <span>Price: </span><span id="priceText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;^article_price^</span>
+        <div class="timestamp"><span>Price: </span><span id="priceText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;^article_price^</span>
         </div>
        <!-- <div class="col-xs-12 time-hide-courses startDates">
         <p>Start dates:</p>
