price and dates

--- a/plugins/portfolio/templates/elements/article.html
+++ b/plugins/portfolio/templates/elements/article.html
@@ -7,7 +7,7 @@
     </div>
     <div class="article_body">
         ^tmp_elements=article=byline^
-        <div class="timestamp time-hide-article" style="^article_timestamp_display^"><span>Duration: </span><span>^article_duration^</span><span> | Price: </span><span>^article_price^</span></div>
+        <div class="timestamp time-hide-article" style="^article_timestamp_display^"><span> | Price: </span><span>^article_price^</span></div>
         <div id="price" class="col-xs-12 time-hide-courses priceDuration">
         <span>Price: </span><span id="priceText">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;^article_price^</span>
         </div>
