--- a/plugins/contact-pencilblue/templates/pb_contact_form.html
+++ b/plugins/contact-pencilblue/templates/pb_contact_form.html
@@ -1,9 +1,9 @@
 <div class="row">
 <div class="col-xs-12">
-    <h3 class="title">HMC Course Booking</h3>
+    <h3 class="title">HMC Enquiry Form</h3>
 </div>
   <div class="col-xs-12 col-sm-4">
-    <h2>You are booking:</h2>
+    <h2>You are enquiring about:</h2>
 </div>
   <div class="col-xs-12 col-sm-8">
     <h2 id="coursetitle"></h2>
