--- a/plugins/portfolio/templates/team.html
+++ b/plugins/portfolio/templates/team.html
@@ -5,8 +5,8 @@
 			<h3 class="title">Our Team</h3>
 		</div>
 		<div class="col-xs-12">
-			<p>At Henley, we focus on talent and people. Our trainers consist of highly qualified consultants and members of university faculties. With outstanding research records and strong professional backgrounds they turn theoretical concepts in to real business solutions.</p>
-			<p>As part of our innovative approach to training, Henley exposes delegates to a variety of different trainers throughout the duration of the course. They are selected for their ability to communicate effectively with delegates of all levels and cultures.</p>
+			<p>At Henley, we focus on talent and people. Our consultants consist of highly qualified industry experts and members of university faculties. With outstanding research records and strong professional backgrounds they turn theoretical concepts in to real business solutions.</p>
+			<p>As part of our innovative approach to consultancy, HMCC exposes delegates to a variety of different tools, techniques and methodologies. We select our consultants based on their ability to communicate effectively with clients from different cultures and industries.</p>
 		</div>
 		<div class="col-xs-12">
 			<hr>
@@ -14,3 +14,6 @@
 	</div>
 </div>
 ^tmp_footer^
+
+
+
