--- a/plugins/portfolio/templates/customised.html
+++ b/plugins/portfolio/templates/customised.html
@@ -2,11 +2,12 @@
 <div ng-class="{container: true, standalone: !hero_image}" class="container standalone">
 	<div class="row">
 		<div class="col-xs-12">
-			<h3 class="title">Customised Training</h3>
+			<h3 class="title">Stand Alone Development Training</h3>
 		</div>
 		<div class="col-xs-12">
-			<p>In addition to the wide range of open courses offered by Henley which can be presented exclusively for an organisation, we also assist organisations by designing customised training solutions.</p>
-			<p>Working exclusively for one company provides the opportunity to modify contents and emphasis to suit the needs of each organisation.</p>
+			<h4>A complete and customised development solution</h4>
+			<p>In addition to offering a world class consultancy services, HMC also design and deliver standalone development solutions. These modules are delivered where and when a client requires which allows great levels of flexibility and accessibility. It can be an effective solution to increase staff motivation and team building within departments, introduce strategic initiatives, or combat organisational transformation.</p>
+			<p>Working exclusively for one company provides the opportunity to modify contents and emphasis to suit the needs of a particular organisation. Programmes are presented and discussed against the experiences within the company, and can therefore be completely consistent with and relevant to the client's requirements.</p>
 		</div>
 		<div class="col-xs-12">
 			<hr>
@@ -15,20 +16,16 @@
 			<h3>Key Benefits:</h3>
 		</div>
 		<div class="col-xs-12 bs-callout bs-callout-danger">
-			<h4>Cost</h4>
-			<p>Cost effective solution when training larger groups with the same needs.</p>
+			<p>We collaborate with clients to identify the most appropriate and cost effective solution.</p>
 		</div>
 		<div class="col-xs-12 bs-callout bs-callout-danger">
-			<h4>Specific</h4>
-			<p>Content customised to specific client requirements.</p>
+			<p>Our learning methodology focuses on combining strategic thinking with operational implementation through continuous practice and review.</p>
 		</div>
 		<div class="col-xs-12 bs-callout bs-callout-danger">
-			<h4>Content</h4>
-			<p>Content can be developed and tailored to specific industries.</p>
+			<p>Clients benefit from skills-based techniques which develops more accurate and effective strategies to apply in the workplace.</p>
 		</div>
 		<div class="col-xs-12 bs-callout bs-callout-danger">
-			<h4>Flexibility</h4>
-			<p>Programmes can be delivered at venue and date chosen by the client.</p>
+			<p>HMC’s faculty is a diverse team of consultants and industry experts with nearly 300 years of combined global experience.</p>
 		</div>
 		<div class="col-xs-12">
 			<hr>
