--- a/plugins/portfolio/templates/elements/front_photos.html
+++ b/plugins/portfolio/templates/elements/front_photos.html
@@ -23,14 +23,14 @@
   			<a href="/about/approach"><img class="img-responsive" src="/img/front_third.jpg" alt="Unique Approach"></a><br />
   	</div>
 </div>
-	<div class="col-xs-6 col-sm-3">
+<!--	<div class="col-xs-6 col-sm-3">
 		<div class="col-xs-12 text-center photoTitle noPad">
 			<a href="http://library.henleymc.com"><p class="mTop">Development Library</p></a>
 	</div>
 		<div class="col-xs-12 bw pic noPad">
   			<a href="http://library.henleymc.com"><img class="img-responsive" src="/img/front_four.jpg" alt="Development Library"></a><br />
   	</div>
-</div>
+</div> -->
 	<div class="col-xs-12">
 		<p>Courses are continuously reviewed ensuring that the content is the very latest and therefore provide delegates and their organisations with a true competitive advantage. Our unique practical training approach blends the development of conceptual skills into the training courses, showing delegates how to manage a range of problems typical of those found within any modern organisation.</p>
 	</div>
