--- a/plugins/portfolio/templates/elements/accreditations.html
+++ b/plugins/portfolio/templates/elements/accreditations.html
@@ -1,6 +1,7 @@
-<div class="col-xs-12 text-center">
+<div class="col-xs-12">
     <h3 class="title">HMC Accreditations</h3>
 <div class="col-xs-3"><img style="max-height: 80px;" class="img-responsive" src="/img/accreditations/cmi_logo.png"></div>
 <div class="col-xs-3"><img style="max-height: 80px;" class="img-responsive" src="/img/accreditations/iso_logo.gif"></div>
 <div class="col-xs-3"><img style="max-height: 80px;" class="img-responsive" src="/img/accreditations/cpd_logo.jpg"></div>
 <div class="col-xs-3"><img style="max-height: 80px;" class="img-responsive" src="/img/accreditations/ilm_logo.jpg"></div>
+</div>
